5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1664_2967.log
== TEST (2019-04-16 11:27:42) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:18) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
printmsg()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:27) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:59) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:59) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:29:00) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- EXECUTION TIME:
0.125793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:29:10) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:29:44) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:29:44) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:29:45) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- EXECUTION TIME:
0.098001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:29:51) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:01) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:13) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1,h2>1.37):
	msg=("Sim")
if(h1,h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:20) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg("Nao")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:11) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg("Nao")
	

print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:30) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg("Nao")
	

print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg("Nao")
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:46) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")
	

print(msg)
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:34:08) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")

	

print(msg)
-- EXECUTION TIME:
0.131277
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:34:08) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")

	

print(msg)
-- EXECUTION TIME:
0.146939
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:37:57) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")
if(h1>h2):
	x=(h1)
if(h2>h1):
	x=(h2)
	
print(msg, x)
-- OUTPUT:
Nao 1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:38:31) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")
if(h1>h2):
	x=(h1)
if(h2>h1):
	x=(h2)
	
print(msg)
print(x)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:38:41) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")
if(h1>h2):
	x=(h1)
if(h2>h1):
	x=(h2)
	
print(msg)
print(x)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:39:02) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")
if(h1>h2):
	x=(h1)
if(h2>h1):
	x=(h2)
	
print(msg)
print(x)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:39:11) 
-- CODE:
h1=float(input("escreva: "))
h2=float(input("escreva: "))

if(h1 and h2>1.37):
	msg=("Sim")
if(h1 and h2<1.37):
	msg=("Nao")
if(h1>h2):
	x=(h1)
if(h2>h1):
	x=(h2)
	
print(msg)
print(x)
-- EXECUTION TIME:
0.1462
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
